--- a/app/drugs-chantix.html
+++ b/app/drugs-chantix.html
@@ -63,7 +63,7 @@
 
 </head>
 
-<body class="home-page">
+<body class="home-page" id="product">
     <!--[Structure] Header START -->
     <header>
         <aside class="navigation__sidebar">
@@ -178,7 +178,7 @@
             <img src="./img/cha.jpg" alt="article banner" class="news__banner">
             <button class="button button--blue button--samples">Ask for samples</button>
             <div class="news__body company__body">
-                <h2 class="news__title">
+                <h2 class="news__title  line-1">
                     Chantix
                 </h2>
                 <div class="news__under-title">
